completed seeding & migration, begun end-points

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "npm run seed && NODE_ENV=test mocha spec/app.spec.js",
+    "test": "npm run setup-dbs && NODE_ENV=test mocha spec/api.spec.js",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback"
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.20.11",
     "pg": "^7.18.2"
   },
