--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.11",
+    "nodemon": "^2.0.2",
     "pg": "^7.18.2"
   },
   "devDependencies": {
