--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "bc-nc-news",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=test nodemon listen.js",
+    "start": "node listen.js",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
